--- a/ASP.NET Core Expert/ASP.NET MVC/Lab.MVC.ConhecimentosEssenciais/src/Lab.MVC.ConhecimentoEssenciais.AppSemTemplate/appsettings.Development.json
+++ b/ASP.NET Core Expert/ASP.NET MVC/Lab.MVC.ConhecimentosEssenciais/src/Lab.MVC.ConhecimentoEssenciais.AppSemTemplate/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server=Kestrel\\SQLEXPRESS;Database=DbLabWorkspace;User Id=ProgrammingLabWorkspace;Password=6dI109LEYmK;Encrypt=false"    
+  //}
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=AppDbContext-75199226-f3c3-4fc5-860f-3a36dc7b2e66;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=False"
   }
 }
