--- a/ASP.NET Core Expert/ASP.NET MVC/Lab.MVC.ConhecimentosEssenciais/src/Lab.MVC.ConhecimentoEssenciais.AppSemTemplate/appsettings.json
+++ b/ASP.NET Core Expert/ASP.NET MVC/Lab.MVC.ConhecimentosEssenciais/src/Lab.MVC.ConhecimentoEssenciais.AppSemTemplate/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=AppDbContext-75199226-f3c3-4fc5-860f-3a36dc7b2e66;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=False"
+  }
 }
